# wifi-server

./: .gitignore  Cargo.toml  deploy.sh
debian/: wifi-server.service
src/: main.rs
